--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,36 @@
               transform: translateX(100px);
     }
   }
+@media only screen and (max-width:1000px)
+{
+    #main
+    {
+        width: 50%;
+    }
+    .btn
+    {
+        font-size: 10px;
+    }
+    .btn .arrow
+    {
+        font-size: 30px !important;
+    }
+}
+@media only screen and (min-width:1000px) and (max-width:1500px)
+{
+    #main
+    {
+        width: 40%;
+    }
+}
+@media only screen and (min-width:1500px) 
+{
+    #main
+    {
+        width: 30%;
+    }
+}
+
 html,body
 {
     height: 100%;
@@ -30,7 +60,6 @@ hr{
     background-color:#161618  !important;
     z-index: 0;
     border-radius: 15px;
-    width:30%;
     color: #f2f5f4;
 }
 #main-title
@@ -58,26 +87,24 @@ hr{
     cursor: pointer;
     transition: 0.5s;
     height: 100%;
-    font-size: 70px;
+    font-size: 60px;
     margin:auto;
 }
 .btn:hover .arrow
 {
-    font-size: 80px;
+    font-size: 70px;
     cursor: pointers;
     transition: 0.5s;
     height: 100%;
     margin:auto;
-    
 }
 #questions
 {
     z-index: 50;
 }
 .question
-{  
+{
     border-top: 2px solid white;
-
     display: grid;
     grid-template-columns: 80% 20%;
 }
