--- a/css/index.css
+++ b/css/index.css
@@ -44,10 +44,15 @@ html,body
     margin: 0 0 0 0;
     display: grid;
 }
-h1,h2,h3,h4,p
+h1,h2,h3,h4
 {
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+p{
+    margin-left:1em;
+    text-align: justify;
+    font-size: 1.5em;
 }
 hr{
     display: block;
@@ -64,7 +69,7 @@ hr{
 }
 #main-title
 {
-    font-size: 15px;
+    font-size: 20px;
 }
 .btn
 {
@@ -86,7 +91,6 @@ hr{
 {
     cursor: pointer;
     transition: 0.5s;
-    height: 100%;
     font-size: 60px;
     margin:auto;
 }
@@ -95,7 +99,6 @@ hr{
     font-size: 70px;
     cursor: pointers;
     transition: 0.5s;
-    height: 100%;
     margin:auto;
 }
 #questions
