added a tree that display how the 'menu' is built, for later uses to change the decisions

--- a/css/index.css
+++ b/css/index.css
@@ -60,6 +60,10 @@ hr{
     padding: 0 0 0 0;
     width: 100%;
 }
+nav
+{
+  height:5vh;
+}
 #main
 {
     background-color:#161618  !important;
@@ -140,4 +144,107 @@ hr{
 {
     transition: 0.5s;
     opacity: 0;
+}
+
+
+
+ 
+  
+.tree ul {
+  position: relative;
+  padding: 1em 0;
+  white-space: nowrap;
+  margin: 0 auto;
+  text-align: center;
+}
+.tree ul::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.tree li {
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  list-style-type: none;
+  position: relative;
+  padding: 1em .5em 0 .5em;
+}
+.tree li::before, .tree li::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 50%;
+  border-top: 1px solid #ccc;
+  width: 50%;
+  height: 1em;
+}
+.tree li::after {
+  right: auto;
+  left: 50%;
+  border-left: 1px solid #ccc;
+}
+.tree li:only-child::after, .tree li:only-child::before {
+  display: none;
+}
+.tree li:only-child {
+  padding-top: 0;
+}
+.tree li:first-child::before, .tree li:last-child::after {
+  border: 0 none;
+}
+.tree li:last-child::before {
+  border-right: 1px solid #ccc;
+  border-radius: 0 5px 0 0;
+}
+.tree li:first-child::after {
+  border-radius: 5px 0 0 0;
+}
+
+.tree ul ul::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 50%;
+  border-left: 1px solid #ccc;
+  width: 0;
+  height: 1em;
+}
+
+.tree li button{
+  border: 1px solid #ccc;
+  padding: .5em .75em;
+  text-decoration: none;
+  /* display: inline-block; */
+  border-radius: 5px;
+  color: #333;
+  position: relative;
+  top: 1px;
+}
+
+.tree li button:hover,
+.tree li button:hover + ul li button {
+  background: #008fff;
+  color: #fff;
+  border: 1px solid #008fff;
+}
+/*
+complied from scss
+*/
+.tree li button:hover + ul li::after,
+.tree li button:hover + ul li::before,
+.tree li button:hover + ul::before,
+.tree li button:hover + ul ul::before {
+    border-color: #008fff;
+}
+.hidden
+{
+  transition: 1s;
+  display: none;
+}
+.shown
+{
+  transition: 1s;
+  display: block;
 }
